syntax = "proto3";

package api.v1.greeter;

import "google/api/annotations.proto";
import "google/protobuf/descriptor.proto";
//import "google/protobuf/wrappers.proto";
//import "google/protobuf/struct.proto";
//import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";
//import "google/protobuf/duration.proto";

option go_package = "demo1go/api/v1/greeter;greeter";
option java_multiple_files = true;
option java_package = "api.v1.greeter";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/api/greeter/meet/{name}"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
